Numerous of bug fixes and extensions for the printable & matchable pom trees