@@ -1,59 +1,65 @@
 package gov.nist.drmf.interpreter.mlp.extensions;
 
-import gov.nist.drmf.interpreter.common.grammar.ExpressionTags;
 import gov.nist.drmf.interpreter.mlp.FakeMLPGenerator;
 import gov.nist.drmf.interpreter.mlp.PomTaggedExpressionUtility;
+import mlp.ParseException;
 import mlp.PomTaggedExpression;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * @author Andre Greiner-Petter
  */
 public class PomMatcher {
+    private static final Logger LOG = LogManager.getLogger(PomMatcher.class.getName());
+
+    private final MatcherConfig defaultFindMatcherConfig = MatcherConfig.getInPlaceMatchConfig();
+
     private final MatchablePomTaggedExpression matcher;
+    private final PomTaggedExpressionChildrenMatcher children;
     private final PrintablePomTaggedExpression orig;
     private final GroupCaptures refGroups;
 
     private PrintablePomTaggedExpression copy;
 
     private boolean inProcess = false;
+    private boolean lastMatchWentUntilEnd = false;
 
     private MatchablePomTaggedExpression leadingBackUpWildcard;
 
-    private LinkedList<LinkedList<PrintablePomTaggedExpression>> remaining;
-    private LinkedList<PrintablePomTaggedExpression> previousCache;
+    private final LinkedList<DepthExpressionsCache> remaining;
+    private DepthExpressionsCache latestDepthExpression;
 
-    private MatcherConfig defaultFindMatcherConfig = new MatcherConfig(true, false);
+    private boolean wasReplaced = false;
 
     /**
      * To get an instance of this class, you should use {@link MatchablePomTaggedExpression#matcher(String)}
      * or {@link MatchablePomTaggedExpression#matcher(PrintablePomTaggedExpression)}.
      * @param mpte the underlying matchable parse tree
      * @param pte the parse tree to match
-     * @param refGroups the group captures object from {@param mpte}.
      */
     PomMatcher(
             MatchablePomTaggedExpression mpte,
-            PrintablePomTaggedExpression pte,
-            GroupCaptures refGroups
+            PrintablePomTaggedExpression pte
     ) {
         this.matcher = mpte;
+        this.children = mpte.getChildrenMatcher();
         this.orig = pte;
-        this.refGroups = refGroups;
+        this.refGroups = mpte.getCaptures();
         this.leadingBackUpWildcard = null;
-        remaining = new LinkedList<>();
-        previousCache = new LinkedList<>();
+        this.remaining = new LinkedList<>();
+        this.latestDepthExpression = null;
         this.init();
     }
 
     private void init() {
-        if ( matcher.childrenMatcher().isFirstChildWildcard() ) {
-            leadingBackUpWildcard = matcher.childrenMatcher().removeFirst();
+        if ( children.isFirstChildWildcard() ) {
+            leadingBackUpWildcard = children.removeFirst();
         }
     }
 
@@ -67,7 +73,9 @@ public class PomMatcher {
      */
     public boolean match() {
         reset();
-        return matcher.match(copy, new MatcherConfig(false, false));
+        boolean res = matcher.match(copy, MatcherConfig.getExactMatchConfig());
+        if ( res ) lastMatchWentUntilEnd = true;
+        return res;
     }
 
     /**
@@ -92,23 +100,25 @@ public class PomMatcher {
             refGroups.clear();
         }
 
-        if ( remaining.isEmpty() ) {
-            return false;
-        }
-
+        wasReplaced = false;
+        lastMatchWentUntilEnd = false;
         boolean matched = false;
-        while ( !remaining.isEmpty() && !matched ) {
+        while ( !remaining.isEmpty() ) {
             // get the remaining list of children to work on
-            LinkedList<PrintablePomTaggedExpression> elements = remaining.removeFirst();
+            latestDepthExpression = remaining.removeFirst();
+            List<PrintablePomTaggedExpression> elements = latestDepthExpression.remainingExpressions;
             LinkedList<PrintablePomTaggedExpression> backlog = new LinkedList<>();
 
             while ( !elements.isEmpty() && !matched ) {
-                PrintablePomTaggedExpression first = elements.removeFirst();
+                PrintablePomTaggedExpression first = elements.remove(0);
+                latestDepthExpression.currentReferenceNode = first;
 
                 // first, we add the children of this element to the list to tests
                 // but only if there are children lists to test
                 if ( first.getPrintableComponents().size() > 0 ) {
-                    remaining.addLast( first.getPrintableComponents() );
+                    remaining.addLast( new DepthExpressionsCache(
+                            latestDepthExpression.currentDepth+1, first.getPrintableComponents())
+                    );
                 }
 
                 if (PomTaggedExpressionUtility.isSequence(matcher)) {
@@ -117,16 +127,24 @@ public class PomMatcher {
                     // if the first worked, we can move forward
                     boolean innerTmpMatch = m.match(first, elements, defaultFindMatcherConfig);
                     while ( innerTmpMatch && !elements.isEmpty() && m.getNextSibling() != null ) {
-                        first = elements.removeFirst();
+                        first = elements.remove(0);
                         m = (MatchablePomTaggedExpression)m.getNextSibling();
                         innerTmpMatch = m.match(first, elements, defaultFindMatcherConfig);
                     }
-                    matched = innerTmpMatch;
+                    // match is only valid, if the regex does not assume more tokens
+                    matched = (innerTmpMatch && m.getNextSibling() == null);
+                    if ( matched && elements.isEmpty() ) lastMatchWentUntilEnd = true;
                 } else {
                     matched = matcher.match(first, elements, defaultFindMatcherConfig);
                 }
 
-                if ( !matched ) backlog.addLast(first);
+
+                if ( !matched ) {
+                    backlog.addLast(first);
+                    latestDepthExpression.passedExpressions.addLast(first);
+                    // we may accidentally found partial hits before, we must reset these
+                    refGroups.clear();
+                }
 
                 if ( matched && leadingBackUpWildcard != null ) {
                     // check backlog, otherwise its false
@@ -141,46 +159,88 @@ public class PomMatcher {
                 // if we found a match, we have to roll back the elements, if there
                 // are elements remaining
                 if ( !elements.isEmpty() ) {
-                    remaining.addFirst(elements);
+                    remaining.addFirst(latestDepthExpression);
                 }
 
                 // we must add hits also... could be nested hits actually, right? ;)
-                remaining.addAll( getCapturedGroupsAsList() );
+                getCapturedGroupsAsList().stream()
+                        .filter( l -> l.size() > 1 )
+                        .map( l -> new DepthExpressionsCache(latestDepthExpression.currentDepth+1, l) )
+                        .forEach( remaining::addLast );
 
-                return matched;
+                return true;
             }
         }
 
-        return matched;
+        return false;
     }
 
-    private void addLogicalGroupFromBacklog(LinkedList<PrintablePomTaggedExpression> backlog) {
-        PrintablePomTaggedExpression l = backlog.getLast();
-        String s = l.getTexString();
-        if ( s.startsWith("^") || s.startsWith("_") ) {
-            LinkedList<PomTaggedExpression> tmp = new LinkedList<>();
-            tmp.add(backlog.removeFirst());
-            tmp.add(l);
-            refGroups.setCapturedGroup(leadingBackUpWildcard.getWildcardID(), tmp);
-        } else {
-            refGroups.setCapturedGroup( leadingBackUpWildcard.getWildcardID(), backlog.removeLast() );
+    public PrintablePomTaggedExpression replaceAll( String expression ) throws ParseException {
+        reset();
+        while ( find() ) {
+            String replaced = PomMatcherUtility.fillPatterns(expression, groups());
+            PrintablePomTaggedExpression p = matcher.getMLPWrapperInstance().parse(replaced);
+            if ( PomTaggedExpressionUtility.isSequence(p) ) {
+                replacePreviousHit(p.getPrintableComponents());
+            } else {
+                LinkedList<PrintablePomTaggedExpression> tmp = new LinkedList<>();
+                tmp.add(p);
+                replacePreviousHit(tmp);
+            }
         }
-        backlog.clear();
+        return copy;
+    }
+
+    public PrintablePomTaggedExpression replaceAll( List<PrintablePomTaggedExpression> replacement ) {
+        reset();
+        while ( find() ) {
+            replacePreviousHit(replacement);
+        }
+        return copy;
     }
 
     /**
-     * Resets the matcher (the next {@link #find()} starts at the beginning again.
+     *
+     * @param replacement
+     * @return
+     * @throws IllegalStateException
      */
-    public void reset() {
-        refGroups.clear();
-        copy = new PrintablePomTaggedExpression(orig);
+    public PrintablePomTaggedExpression replacePreviousHit( List<PrintablePomTaggedExpression> replacement )
+            throws IllegalStateException{
+        if ( !inProcess || latestDepthExpression == null ) {
+            throw new IllegalStateException("No previous hit recorded!");
+        } else if ( wasReplaced ) return copy;
 
-        // reset lists
-        remaining.clear();
-        LinkedList<PrintablePomTaggedExpression> tmp = new LinkedList<>();
-        tmp.add(copy);
-        remaining.add(tmp);
-        previousCache.clear();
+        PomTaggedExpression parent = latestDepthExpression.currentReferenceNode.getParent();
+        if ( parent == null ) {
+            // essentially means, that the currentMatchReference is the root, which means we replace the entire
+            // expression by a new one
+            wasReplaced = true;
+            if ( replacement.isEmpty() ) return FakeMLPGenerator.generateEmptySequencePPTE();
+            else if ( replacement.size() == 1 ) return replacement.get(0);
+            else {
+                PrintablePomTaggedExpression r = FakeMLPGenerator.generateEmptySequencePPTE();
+                replacement.forEach( r::addComponent );
+                return r;
+            }
+        }
+
+        // clear the existing children
+        PrintablePomTaggedExpression pparent = (PrintablePomTaggedExpression) parent;
+
+        // add replacement to the passed components, since we won't check them again
+        replacement.forEach( latestDepthExpression.passedExpressions::addLast );
+
+        // create new components list for the parent
+        LinkedList<PrintablePomTaggedExpression> newComponents =
+                new LinkedList<>(latestDepthExpression.passedExpressions);
+        newComponents.addAll( latestDepthExpression.remainingExpressions );
+        pparent.setPrintableComponents( newComponents );
+
+        wasReplaced = true;
+
+        // does this work or did we use copies of copies?
+        return copy;
     }
 
     private LinkedList<LinkedList<PrintablePomTaggedExpression>> getCapturedGroupsAsList() {
@@ -204,6 +264,47 @@ public class PomMatcher {
         return result;
     }
 
+    private void addLogicalGroupFromBacklog(LinkedList<PrintablePomTaggedExpression> backlog) {
+        PrintablePomTaggedExpression l = backlog.getLast();
+        String s = l.getTexString();
+        if ( s.startsWith("^") || s.startsWith("_") ) {
+            LinkedList<PomTaggedExpression> tmp = new LinkedList<>();
+            tmp.add(backlog.removeFirst());
+            tmp.add(l);
+            refGroups.setCapturedGroup( leadingBackUpWildcard.getWildcardID(), tmp);
+        } else {
+            refGroups.setCapturedGroup( leadingBackUpWildcard.getWildcardID(), backlog.removeLast() );
+        }
+        backlog.clear();
+    }
+
+    /**
+     * Returns true if after the previous hit there were no tokens remaining to test.
+     * @return true if there are no tokens remaining after a previous hit. If there were
+     * no previous hits found, it always returns false. If the previous hit was an
+     * exact match, it surely returns true.
+     */
+    boolean lastMatchReachedEnd() {
+        return lastMatchWentUntilEnd;
+    }
+
+    /**
+     * Resets the matcher (the next {@link #find()} starts at the beginning again.
+     */
+    public void reset() {
+        lastMatchWentUntilEnd = false;
+        refGroups.clear();
+        copy = new PrintablePomTaggedExpression(orig);
+
+        // reset lists
+        remaining.clear();
+        DepthExpressionsCache depthExpressionsCache = new DepthExpressionsCache(0);
+        depthExpressionsCache.remainingExpressions.add(copy);
+        remaining.add(depthExpressionsCache);
+
+        wasReplaced = false;
+    }
+
     /**
      * Returns the captured groups during a {@link #find()} or {@link #match()}.
      * The result will be empty (not null) if there were no match before.
@@ -212,5 +313,22 @@ public class PomMatcher {
      */
     public Map<String, String> groups() {
         return matcher.getStringMatches();
+    }
+
+    private static class DepthExpressionsCache {
+        private final int currentDepth;
+        private PrintablePomTaggedExpression currentReferenceNode = null;
+        private final LinkedList<PrintablePomTaggedExpression> passedExpressions;
+        private final LinkedList<PrintablePomTaggedExpression> remainingExpressions;
+
+        DepthExpressionsCache(int depth) {
+            this(depth, new LinkedList<>());
+        }
+
+        DepthExpressionsCache(int depth, List<PrintablePomTaggedExpression> expressions) {
+            this.currentDepth = depth;
+            this.remainingExpressions = new LinkedList<>(expressions);
+            this.passedExpressions = new LinkedList<>();
+        }
     }
 }
